"fix" Byte Depreciation issue